AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I ../m4

if BUILD_PVCAM
   PVCAM = PVCAM
endif
if BUILD_QCAM
   QCAM = QCam
endif
if BUILD_SPOT
   SPOT = Spot
endif
if BUILD_DC1394
   DC1394 = dc1394
endif
if BUILD_ANDOR
   ANDOR = Andor
endif
if BUILD_ANDORLASERCOMBINER
   ANDORLASERCOMBINER = AndorLaserCombiner
endif
if BUILD_SENSICAM
   SENSICAM = Sensicam
endif
if BUILD_SIMPLECAM
   SIMPLECAM = SimpleCam
endif
if BUILD_USBMANAGER
   USBMANAGER = USBManager 
endif
if BUILD_ITC
   ITC = ITC18
endif
if BUILD_SCION
   SCION = ScionCam
endif
if BUILD_V4L2
   V4L = Video4Linux
endif
if BUILD_OPENCV
   OPENCVGRABBER = OpenCVgrabber
endif

SUBDIRS =  AAAOTF Aladdin AOTF $(ANDOR) $(ANDORLASERCOMBINER) Aquinas Arduino ASIFW1000 ASIStage ASIWPTR CARVII Cobolt CoherentCube Conix $(DC1394) DTOpenLayer DemoCamera Corvus ImageProcessorChain $(ITC) FreeSerialPort kdv K8055 K8061 LeicaDMI LeicaDMR Ludl LudlLow LumencorSpectra MaestroServo MP285 Neos $(NIDAQ) Nikon NikonTE2000 nPoint Omicron $(OPENCVGRABBER) PI PI_GCS PI_GCS_2 Prior PriorLegacy ParallelPort Pecon PrecisExcite $(PVCAM) $(QCAM) Sapphire $(SCION) Scientifica $(SIMPLECAM) $(SENSICAM) SerialManager SimpleAutofocus $(SPOT) SpectralLMM5 SutterLambda SutterStage Thorlabs ThorlabsDCxxxx ThorlabsFilterWheel ThorlabsSC10 $(USBMANAGER) Utilities Vincent $(V4L) XCite120PC_Exacte XCiteLed Xcite Yokogawa ZeissCAN ZeissCAN29
 
