AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I ../m4

if BUILD_ANDOR
   ANDOR = Andor
endif
if BUILD_ANDORLASERCOMBINER
   ANDORLASERCOMBINER = AndorLaserCombiner
endif
if BUILD_DC1394
   DC1394 = dc1394
endif
if BUILD_HID
   HIDMANAGER = HIDManager
endif
if BUILD_IDSUEYE
   IDSUEYE = IDS_uEye
endif
if BUILD_ITC
   ITC = ITC18
endif
if BUILD_OPENCV
   OPENCVGRABBER = OpenCVgrabber
endif
if BUILD_PVCAM
   PVCAM = PVCAM PrincetonInstruments
endif
if BUILD_QCAM
   QCAM = QCam
endif
if BUILD_SCION
   SCION = ScionCam
endif
if BUILD_SENSICAM
   SENSICAM = Sensicam
endif
if BUILD_SIMPLECAM
   SIMPLECAM = SimpleCam
endif
if BUILD_SPOT
   SPOT = Spot
endif
if BUILD_USBMANAGER
   USBMANAGER = USBManager 
endif
if BUILD_V4L2
   V4L = Video4Linux
endif

SUBDIRS =  AAAOTF Aladdin AOTF $(ANDOR) $(ANDORLASERCOMBINER) Aquinas Arduino ASIFW1000 ASIStage ASITiger ASIWPTR CARVII Cobolt CoherentCube Conix CSUW1 $(DC1394) DTOpenLayer DemoCamera Corvus $(IDSUEYE) ImageProcessorChain $(ITC) FreeSerialPort FocalPoint $(HIDMANAGER) kdv K8055 K8061 LeicaDMI LeicaDMR LeicaDMSTC Ludl LudlLow LumencorSpectra MaestroServo Marzhauser Marzhauser-LStep MicroPoint MP285 Neos $(NIDAQ) Nikon NikonTE2000 Motic_mac nPoint Omicron $(OPENCVGRABBER) Oxxius PI PI_GCS PI_GCS_2 Piezosystem_30DV50 Piezosystem_dDrive Piezosystem_NV120_1 Piezosystem_NV40_1 Piezosystem_NV40_3 Prior PriorLegacy ParallelPort Pecon PrecisExcite $(PVCAM) $(QCAM) Sapphire $(SCION) Scientifica $(SIMPLECAM) $(SENSICAM) SerialManager SimpleAutofocus $(SPOT) SpectralLMM5 SutterLambda SutterStage Thorlabs ThorlabsDCxxxx ThorlabsFilterWheel ThorlabsSC10 Tofra $(USBMANAGER) Utilities VariLC Vincent Vortran $(V4L) XCite120PC_Exacte XCiteLed Xcite XLight Yokogawa Zaber ZeissCAN ZeissCAN29
