
AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I ../m4

if BUILD_ANDOR
   ANDOR = Andor
endif
if BUILD_ANDORLASERCOMBINER
   ANDORLASERCOMBINER = AndorLaserCombiner
endif
if BUILD_ANDORSDK3
   ANDORSDK3 = AndorSDK3
endif
if BUILD_DC1394
   DC1394 = dc1394
endif
if BUILD_HID
   HIDMANAGER = HIDManager
endif
if BUILD_IDSUEYE
   IDSUEYE = IDS_uEye
endif
if BUILD_IIDC
   IIDC = IIDC
endif
if BUILD_ITC
   ITC = ITC18
endif
if BUILD_MODBUS
   MODBUS = Modbus
endif
if BUILD_OPENCV
   OPENCVGRABBER = OpenCVgrabber
   FAKECAMERA = FakeCamera
endif
if BUILD_PVCAM
   PVCAM = PVCAM PrincetonInstruments
endif
if BUILD_QCAM
   QCAM = QCam
endif
if BUILD_SCION
   SCION = ScionCam
endif
if BUILD_SENSICAM
   SENSICAM = Sensicam
endif
if BUILD_SEQUENCER_TEST
   SEQUENCE_TESTER = SequenceTester
endif
if BUILD_SIMPLECAM
   SIMPLECAM = SimpleCam
endif
if BUILD_SPOT
   SPOT = Spot
endif
if BUILD_USBMANAGER
   USBMANAGER = USBManager 
endif
if BUILD_V4L2
   V4L = Video4Linux
endif

# Please keep these ASCII-lexically sorted (pass through sort(1)).
SUBDIRS = \
	$(ANDOR) \
	$(ANDORLASERCOMBINER) \
	$(ANDORSDK3) \
	$(DC1394) \
	$(FAKECAMERA) \
	$(HIDMANAGER) \
	$(IDSUEYE) \
	$(IIDC) \
	$(ITC) \
	$(NIDAQ) \
	$(OPENCVGRABBER) \
	$(MODBUS) \
	$(PVCAM) \
	$(QCAM) \
	$(SCION) \
	$(SENSICAM) \
	$(SEQUENCE_TESTER) \
	$(SIMPLECAM) \
	$(SPOT) \
	$(USBMANAGER) \
	$(V4L) \
	AAAOTF \
	AOTF \
	ASIFW1000 \
	ASIStage \
	ASITiger \
	ASIWPTR \
	Aladdin \
	Aquinas \
	Arduino \
	BlueboxOptics_niji \
	CARVII \
	CNCMicroscope \
	CSUW1 \
	Cobolt \
	CoherentCube \
	CoherentOBIS \
   CoherentScientificRemote \
	Conix \
	Corvus \
	DemoCamera \
	Diskovery \
	DTOpenLayer \
	Diskovery \
	FocalPoint \
	FreeSerialPort \
	HydraLMT200 \
	ImageProcessorChain \
	K8055 \
	K8061 \
	LeicaDMI \
	LeicaDMR \
	LeicaDMSTC \
	Ludl \
	LudlLow \
	LumencorSpectra \
	MP285 \
	MaestroServo \
	Marzhauser \
	Marzhauser-LStep \
	MarzhauserLStepOld \
	MicroPoint \
	Motic_mac \
	Neos \
	NewportCONEX \
	NewportSMC \
	Nikon \
	NikonTE2000 \
	OVP_ECS2 \
	Omicron \
	Oxxius \
	PI \
	PI_GCS \
	PI_GCS_2 \
	ParallelPort \
	Pecon \
	Piezosystem_30DV50 \
	Piezosystem_NV120_1 \
	Piezosystem_NV40_1 \
	Piezosystem_NV40_3 \
	Piezosystem_dDrive \
	PrecisExcite \
	Prior \
	PriorLegacy \
	Sapphire \
	Scientifica \
	SerialManager \
	SimpleAutofocus \
	SmarActHCU-3D \
	SpectralLMM5 \
	SutterLambda \
	SutterStage \
	Thorlabs \
	ThorlabsDCxxxx \
	ThorlabsFilterWheel \
	ThorlabsSC10 \
	Tofra \
	TriggerScope \
	UserDefinedSerial \
	Utilities \
	VariLC \
	Vincent \
	Vortran \
	WieneckeSinske \
	XCite120PC_Exacte \
	XCiteLed \
	XCiteXT600 \
	XLight \
	Xcite \
	Yokogawa \
	Zaber \
	ZeissCAN \
	ZeissCAN29 \
	kdv \
	nPoint \
	pgFocus
